# cli_interpreter

./: CMakeLists.txt  interpreter.cpp  interpreter.h  main.cpp  registrator.cpp  registrator.h
functions/: function_add.cpp  function_concat.cpp  function_mult.cpp  function_sub.cpp
interfaces/: function.h
